package Zoo_example;

public interface AnimalSound {
   void makeSound();

}
