package Zoo_example;

public interface Basic_Needs {
    void eat();
    void sleep();
    void poop();
}
