package Zoo_example;

public class Human implements Basic_Needs {
    @Override
    public void eat() {
    }

    @Override
    public void sleep() {
    }

    @Override
    public void poop() {
    }

}
