package Zoo_example;

public class Staff extends Human {
}
