package Zoo_example;

public class Tiger extends Animal{

    public Tiger(int numberOfLegs, String name) {

        super(numberOfLegs, name);
    }

}
